feat: landing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CMFB - Community Microfinance Bank | Ilorin, Nigeria</title>
-    <meta name="description" content="Community Microfinance Bank (CMFB) - Your trusted financial partner in Ilorin, Nigeria. Offering microloans, savings accounts, business banking and more." />
+    <meta name="description" content="Crs Microfinance Bank (CMFB) - Your trusted financial partner in Ilorin, Nigeria. Offering microloans, savings accounts, business banking and more." />
     <meta name="author" content="CMFB" />
     <meta name="keywords" content="microfinance, bank, loans, savings, Ilorin, Nigeria, CMFB, business banking" />
 
