feat: landing page

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CMFB - Community Microfinance Bank | Ilorin, Nigeria</title>
-    <meta name="description" content="Crs Microfinance Bank (CMFB) - Your trusted financial partner in Ilorin, Nigeria. Offering microloans, savings accounts, business banking and more." />
+    <title>CMFB - Crescent Microfinance Bank | Ilorin, Nigeria</title>
+    <meta name="description" content="Crescent Microfinance Bank (CMFB) - Your trusted financial partner in Ilorin, Nigeria. Offering microloans, savings accounts, business banking and more." />
     <meta name="author" content="CMFB" />
     <meta name="keywords" content="microfinance, bank, loans, savings, Ilorin, Nigeria, CMFB, business banking" />
 
-    <meta property="og:title" content="CMFB - Community Microfinance Bank | Ilorin, Nigeria" />
+    <meta property="og:title" content="CMFB - Crescent Microfinance Bank | Ilorin, Nigeria" />
     <meta property="og:description" content="Your trusted financial partner in Ilorin. Microloans, savings, and business banking solutions." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/assets/logoCre.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="/assets/logoCre.jpg" />
   </head>
 
